change the media listener sessions map key, other fixes